Fixed the spacing between the navbar and the body

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,3 +16,7 @@
     --content-font: 'Telex';
     --title-font: 'Paytone_One';
 }
+
+body { 
+    padding-top: 6rem; 
+}
